--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
   sliver_tools: ^0.2.12
+  super_sliver_list: ^0.4.1
 
 dev_dependencies:
   flutter_test:
